assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 107 conflicts: 10 shift/reduce
State 134 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features '}' ';'
    6      | error ';'

    7 feature: method ';'
    8        | attr ';'
    9        | error ';'

   10 features: ε
   11         | feature
   12         | features feature

   13 formal: OBJECTID ':' TYPEID

   14 formals: ε
   15        | formal
   16        | formals ',' formal

   17 expr: OBJECTID ASSIGN expr
   18     | OBJECTID '(' ')'
   19     | OBJECTID '(' exprs ')'
   20     | expr '.' OBJECTID '(' ')'
   21     | expr '.' OBJECTID '(' exprs ')'
   22     | expr '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr '@' TYPEID '.' OBJECTID '(' exprs ')'
   24     | IF expr THEN expr
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' block_exprs '}'
   28     | LET let_expr
   29     | CASE expr OF cases ESAC
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr LE expr
   38     | expr '<' expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST

   46 exprs: expr
   47      | exprs ',' expr

   48 block_exprs: expr ';'
   49            | block_exprs expr ';'
   50            | error ';'

   51 let_expr: OBJECTID ':' TYPEID IN expr
   52         | OBJECTID ':' TYPEID let_assignment IN expr
   53         | OBJECTID ':' TYPEID ',' let_expr
   54         | OBJECTID ':' TYPEID let_assignment ',' let_expr
   55         | error ','

   56 let_assignment: ASSIGN expr

   57 case: OBJECTID ':' TYPEID DARROW expr ';'

   58 cases: case
   59      | cases case

   60 method: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'

   61 attr: OBJECTID ':' TYPEID
   62     | OBJECTID ':' TYPEID ASSIGN expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 19 20 21 22 23 41 60
    ')' (41) 18 19 20 21 22 23 41 60
    '*' (42) 34
    '+' (43) 32
    ',' (44) 16 47 53 54 55
    '-' (45) 33
    '.' (46) 20 21 22 23
    '/' (47) 35
    ':' (58) 13 51 52 53 54 57 60 61 62
    ';' (59) 4 5 6 7 8 9 48 49 50 57
    '<' (60) 38
    '=' (61) 39
    '@' (64) 22 23
    '{' (123) 4 5 27 60
    '}' (125) 4 5 27 60
    '~' (126) 36
    error (256) 6 9 50 55
    CLASS (258) 4 5
    ELSE (259) 25
    FI (260) 25
    IF (261) 24 25
    IN (262) 51 52
    INHERITS (263) 5
    LET (264) 28
    LOOP (265) 26
    POOL (266) 26
    THEN (267) 24 25
    WHILE (268) 26
    CASE (269) 29
    ESAC (270) 29
    OF (271) 29
    DARROW (272) 57
    NEW (273) 30
    ISVOID (274) 31
    STR_CONST <symbol> (275) 44
    INT_CONST <symbol> (276) 43
    BOOL_CONST <boolean> (277) 45
    TYPEID <symbol> (278) 4 5 13 22 23 30 51 52 53 54 57 60 61 62
    OBJECTID <symbol> (279) 13 17 18 19 20 21 22 23 42 51 52 53 54 57 60 61 62
    ASSIGN (280) 17 56 62
    NOT (281) 40
    LE (282) 37
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature <feature> (49)
        on left: 7 8 9
        on right: 11 12
    features <features> (50)
        on left: 10 11 12
        on right: 4 5 12
    formal <formal> (51)
        on left: 13
        on right: 15 16
    formals <formals> (52)
        on left: 14 15 16
        on right: 16 60
    expr <expression> (53)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 17 20 21 22 23 24 25 26 29 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 51 52 56 57 60 62
    exprs <expressions> (54)
        on left: 46 47
        on right: 19 21 23 47
    block_exprs <expressions> (55)
        on left: 48 49 50
        on right: 27 49
    let_expr <expression> (56)
        on left: 51 52 53 54 55
        on right: 28 53 54
    let_assignment <expression> (57)
        on left: 56
        on right: 52 54
    case <case_> (58)
        on left: 57
        on right: 58 59
    cases <cases> (59)
        on left: 58 59
        on right: 29 59
    method <feature> (60)
        on left: 60
        on right: 7
    attr <feature> (61)
        on left: 61 62
        on right: 8


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error • ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS • TYPEID '{' features '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' •

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID • '{' features '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' features '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' • features '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    feature   go to state 15
    features  go to state 16
    method    go to state 17
    attr      go to state 18


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' features '}' ';'

    '{'  shift, and go to state 19


State 13

    9 feature: error • ';'

    ';'  shift, and go to state 20


State 14

   60 method: OBJECTID • '(' formals ')' ':' TYPEID '{' expr '}'
   61 attr: OBJECTID • ':' TYPEID
   62     | OBJECTID • ':' TYPEID ASSIGN expr

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 15

   11 features: feature •

    $default  reduce using rule 11 (features)


State 16

    4 class: CLASS TYPEID '{' features • '}' ';'
   12 features: features • feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 23

    feature  go to state 24
    method   go to state 17
    attr     go to state 18


State 17

    7 feature: method • ';'

    ';'  shift, and go to state 25


State 18

    8 feature: attr • ';'

    ';'  shift, and go to state 26


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' • features '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    feature   go to state 15
    features  go to state 27
    method    go to state 17
    attr      go to state 18


State 20

    9 feature: error ';' •

    $default  reduce using rule 9 (feature)


State 21

   61 attr: OBJECTID ':' • TYPEID
   62     | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 28


State 22

   60 method: OBJECTID '(' • formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 29

    $default  reduce using rule 14 (formals)

    formal   go to state 30
    formals  go to state 31


State 23

    4 class: CLASS TYPEID '{' features '}' • ';'

    ';'  shift, and go to state 32


State 24

   12 features: features feature •

    $default  reduce using rule 12 (features)


State 25

    7 feature: method ';' •

    $default  reduce using rule 7 (feature)


State 26

    8 feature: attr ';' •

    $default  reduce using rule 8 (feature)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' features • '}' ';'
   12 features: features • feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 33

    feature  go to state 24
    method   go to state 17
    attr     go to state 18


State 28

   61 attr: OBJECTID ':' TYPEID •
   62     | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 61 (attr)


State 29

   13 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 35


State 30

   15 formals: formal •

    $default  reduce using rule 15 (formals)


State 31

   16 formals: formals • ',' formal
   60 method: OBJECTID '(' formals • ')' ':' TYPEID '{' expr '}'

    ','  shift, and go to state 36
    ')'  shift, and go to state 37


State 32

    4 class: CLASS TYPEID '{' features '}' ';' •

    $default  reduce using rule 4 (class)


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' • ';'

    ';'  shift, and go to state 38


State 34

   62 attr: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 35

   13 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 54


State 36

   16 formals: formals ',' • formal

    OBJECTID  shift, and go to state 29

    formal  go to state 55


State 37

   60 method: OBJECTID '(' formals ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 56


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' ';' •

    $default  reduce using rule 5 (class)


State 39

   24 expr: IF • expr THEN expr
   25     | IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 57


State 40

   28 expr: LET • let_expr

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let_expr  go to state 60


State 41

   26 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


State 42

   29 expr: CASE • expr OF cases ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 62


State 43

   30 expr: NEW • TYPEID

    TYPEID  shift, and go to state 63


State 44

   31 expr: ISVOID • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 64


State 45

   44 expr: STR_CONST •

    $default  reduce using rule 44 (expr)


State 46

   43 expr: INT_CONST •

    $default  reduce using rule 43 (expr)


State 47

   45 expr: BOOL_CONST •

    $default  reduce using rule 45 (expr)


State 48

   17 expr: OBJECTID • ASSIGN expr
   18     | OBJECTID • '(' ')'
   19     | OBJECTID • '(' exprs ')'
   42     | OBJECTID •

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 42 (expr)


State 49

   40 expr: NOT • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 67


State 50

   36 expr: '~' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 68


State 51

   27 expr: '{' • block_exprs '}'

    error       shift, and go to state 69
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr         go to state 70
    block_exprs  go to state 71


State 52

   41 expr: '(' • expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 72


State 53

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr
   62 attr: OBJECTID ':' TYPEID ASSIGN expr •

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 62 (attr)


State 54

   13 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 13 (formal)


State 55

   16 formals: formals ',' formal •

    $default  reduce using rule 16 (formals)


State 56

   60 method: OBJECTID '(' formals ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 82


State 57

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   24     | IF expr • THEN expr
   25     | IF expr • THEN expr ELSE expr FI
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 58

   55 let_expr: error • ','

    ','  shift, and go to state 84


State 59

   51 let_expr: OBJECTID • ':' TYPEID IN expr
   52         | OBJECTID • ':' TYPEID let_assignment IN expr
   53         | OBJECTID • ':' TYPEID ',' let_expr
   54         | OBJECTID • ':' TYPEID let_assignment ',' let_expr

    ':'  shift, and go to state 85


State 60

   28 expr: LET let_expr •

    $default  reduce using rule 28 (expr)


State 61

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   26     | WHILE expr • LOOP expr POOL
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr

    LOOP  shift, and go to state 86
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 62

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | CASE expr • OF cases ESAC
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 63

   30 expr: NEW TYPEID •

    $default  reduce using rule 30 (expr)


State 64

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   31     | ISVOID expr •
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 31 (expr)


State 65

   17 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 88


State 66

   18 expr: OBJECTID '(' • ')'
   19     | OBJECTID '(' • exprs ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52
    ')'         shift, and go to state 89

    expr   go to state 90
    exprs  go to state 91


State 67

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr
   40     | NOT expr •

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 40 (expr)


State 68

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | '~' expr •
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 36 (expr)


State 69

   50 block_exprs: error • ';'

    ';'  shift, and go to state 92


State 70

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr
   48 block_exprs: expr • ';'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 93


State 71

   27 expr: '{' block_exprs • '}'
   49 block_exprs: block_exprs • expr ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '}'         shift, and go to state 94
    '('         shift, and go to state 52

    expr  go to state 95


State 72

   20 expr: expr • '.' OBJECTID '(' ')'
   21     | expr • '.' OBJECTID '(' exprs ')'
   22     | expr • '@' TYPEID '.' OBJECTID '(' ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' exprs ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • LE expr
   38     | expr • '<' expr
   39     | expr • '=' expr
   41     | '(' expr • ')'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ')'  shift, and go to state 96


State 73

   37 expr: expr LE • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 97


State 74

   38 expr: expr '<' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 98


State 75

   39 expr: expr '=' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 99


State 76

   32 expr: expr '+' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 100


State 77

   33 expr: expr '-' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 101


State 78

   34 expr: expr '*' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 102


State 79

   35 expr: expr '/' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 103


State 80

   22 expr: expr '@' • TYPEID '.' OBJECTID '(' ')'
   23     | expr '@' • TYPEID '.' OBJECTID '(' exprs ')'

    TYPEID  shift, and go to state 104


State 81

   20 expr: expr '.' • OBJECTID '(' ')'
   21     | expr '.' • OBJECTID '(' exprs ')'

    OBJECTID  shift, and go to state 105


State 82

   60 method: OBJECTID '(' formals ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 106


State 83

   24 expr: IF expr THEN • expr
   25     | IF expr THEN • expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 107


State 84

   55 let_expr: error ',' •

    $default  reduce using rule 55 (let_expr)


State 85

   51 let_expr: OBJECTID ':' • TYPEID IN expr
   52         | OBJECTID ':' • TYPEID let_assignment IN expr
   53         | OBJECTID ':' • TYPEID ',' let_expr
   54         | OBJECTID ':' • TYPEID let_assignment ',' let_expr

    TYPEID  shift, and go to state 108


State 86

   26 expr: WHILE expr LOOP • expr POOL
